# swagger.json
@@ -186,33 +186,6 @@
         }
       }
     },
-    "/owners/{id}/pets": {
-      "get": {
-        "description": "",
-        "produces": [
-          "application/json"
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/pets/": {
       "get": {
         "description": "",
@@ -256,9 +229,6 @@
                   "example": "any"
                 },
                 "temperament": {
-                  "example": "any"
-                },
-                "ownerId": {
                   "example": "any"
                 }
               }
@@ -335,9 +305,6 @@
                   "example": "any"
                 },
                 "temperament": {
-                  "example": "any"
-                },
-                "ownerId": {
                   "example": "any"
                 }
               }
